# uDevice

./: .gitignore  device.uc
src/: CMakeLists.txt  device.h  ucode.c  websocket.c
uDevice/: capabilities.uc  config.uc  context.uc  protocol.uc  settings.uc
